--- a/java/templates.java.datasource.project1/pom.xml
+++ b/java/templates.java.datasource.project1/pom.xml
@@ -31,6 +31,14 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- JUnit - Unit testing framework for Java -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
