--- a/java/templates.java.datasource.project1/pom.xml
+++ b/java/templates.java.datasource.project1/pom.xml
@@ -61,13 +61,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
-				<configuration>
+				<!-- <configuration>
 					<archive>
 						<manifest>
 							<mainClass>templates.java.datasource.project1.Main</mainClass>
 						</manifest>
 					</archive>
-				</configuration>
+				</configuration> -->
 			</plugin>
 
 		</plugins>
